# goit-web-homework-6

./: README.md  create_db.sql  exec_sql_file.py  hw_db  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  seeds.py
