[tool.poetry]
name = "goit-web-homework-6"
version = "0.1.0"
description = ""
authors = ["APodoba <APodoba@luxoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
